crates/uitest/fixtures/ty_check/where_const_predicate_mandelbrot.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/where_const_predicate_mandelbrot.fe
---
error[8-0082]: where clause const predicate failed
   ┌─ where_const_predicate_mandelbrot.fe:48:5
   │
48 │     assert_converges<HalfReal>()
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^ const predicate evaluated to `false`
